[package]
name = "med"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
futures-timer = "3"
unicode-segmentation = "1"

[dependencies.crossterm]
version = "0.22"
features = ["event-stream"]
